[tool.poetry]
name = "network_analytics"
version = "0.1.0"
description = ""
authors = ["ana"]

[tool.poetry.dependencies]
python = "^3.7"
jupyter = "^1.0.0"
jupyterlab = "^1.2.4"
scipy = "^1.4.1"
matplotlib = "^3.1.2"
seaborn = "^0.9.0"
japanize-matplotlib = "^1.0.5"
pandas-profiling = "^2.3.0"
tqdm = "^4.41.1"
swifter = "^0.297"
umap-learn = "^0.3.10"
requests = "^2.23.0"
graphviz = "^0.13.2"
boto3 = "^1.12.13"
black = "^19.10b0"
pytest = "^5.3.5"
openpyxl = "^3.0.3"
papermill = "^2.0.0"
nteract-on-jupyter = "^2.1.3"
wheel = "^0.34.2"
Pillow = "^7.1.2"
gensim = "^3.8.3"
numpy = "^1.19.1"
pandas = "^1.0.5"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"